add all changes

--- a/index.html
+++ b/index.html
@@ -6,17 +6,111 @@
     <link rel="stylesheet" href="style.css">
     <title>g3-Architect</title>
 </head>
-<body>
-    <header>
-
+<body class="work-sans-font">
+    <header class="Primary-Bg">
+        <nav class="Nav-bar Display-flex">
+            <h3 class="Nav-Title">G3-Architect</h3>
+           <ul class="Nav-link Display-flex">
+            <li class="Nav-item"><a href="" class="Nav-links">Home</a></li>
+            <li class="Nav-item"><a href="" class="Nav-links">About</a></li>
+            <li class="Nav-item"><a href="" class="Nav-links">Contact Us</a></li>
+            <li class="Nav-item"><a href="" class="Nav-links">login</a></li>
+           </ul>
+        </nav>
+        <div class="Bannar">
+            <div class="Bannar-Content">
+                <h2 class="Bannar-Title">Brand New<br>Group of Architects</h2>
+                <p class="Bannar-Description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="ban-Btn btn-deco">Explore More</button>
+            </div>
+            <img class="Bannar-Image" src="images/banner.png" alt="">
+        </div>
     </header>
 
-    <main>
+    <main class="main">
+        <section class="teams Display-flex">
+            <div class="image-Cointainer">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="image-Feture">
+                <h1 class="Section-Title">
+                    <span id="Quick-list">Quick list</span> <span id="of-Our">of Our</span> <span id="Feature">Features</span>
+                </h1>
+                <p class="Image-Description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus excepturi, vel reiciendis quo quis, cumque sequi impedit saepe recusandae hic qui accusamus! Aut esse eligendi architecto, eum magnam fuga iusto.
+                </p>
+                <button class="ban-Btn">Explore More</button>
+            </div>
+        </section>
 
+        <section class="">
+
+        </section>
+
+        <section>
+            <h3 class="Section-Title">Some Facts</h3>
+            <p class="sm-fct-des">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+            <div class="fact-container">
+                <div class="fact-card Display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fct-icon">
+                        <h4 class="fct-crd-value">54</h4>
+                        <h5 class="fct-name">Awards Winnings</h5>
+                    </div>
+            </div>
+            <div class="fact-card Display-flex">
+                <div>
+                    <img src="images/icons/projects.png" alt="" class="fct-icon">
+                    <h4 class="fct-crd-value">1458</h4>
+                    <h5 class="fct-name">Project Finished</h5>
+                </div>
+            </div>
+            <div class="fact-card Display-flex">
+                <div>
+                    <img src="images/icons/customers.png" alt="" class="fct-icon">
+                    <h4 class="fct-crd-value">590</h4>
+                    <h5 class="fct-name">Clients Worked</h5>
+                </div>
+            </div>
+            <div class="fact-card Display-flex">
+                <div>
+                    <img src="images/icons/email.png" alt="" class="fct-icon">
+                    <h4 class="fct-crd-value">22578</h4>
+                    <h5 class="fct-name">Email Send</h5>
+                </div>
+            </div>
+        </div>
+            </div>
+        </section>
+
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="sponsor-title">Our Sponspors</h3>
+                <p class="sponsor-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+            </div>
+
+            <div class="sponsor-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+
+        </section>
     </main>
 
     <footer>
-        
+        <div class="footer">
+            <p class="footer-description">All rights reserved copyright <span>&#169;</span>2023 by S.A. Mahfuz</p>
+        </div>
     </footer>
 </body>
 </html>
