--- a/index.html
+++ b/index.html
@@ -46,9 +46,41 @@
             </div>
         </section>
 
-        <section class="">
+        <section class="features Display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p id="Quick-list">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
 
-        </section>
+                <!-- feature card container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p id="Quick-list">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p id="Quick-list">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p id="Quick-list">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p id="Quick-list">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+
+            </div>
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+         </section>
+
 
         <section>
             <h3 class="Section-Title">Some Facts</h3>
